--- a/DesignerRHN/DesignerRHN-war/web/emplviajero.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/emplviajero.xhtml
@@ -130,7 +130,7 @@
                                     </p:cellEditor>
 
                                     <f:facet name="footer" >
-                                        <p:commandButton value="" style="width: 780px; margin: -14px; height: 20px; border: none; color: blue" action="tipoviajero" id="fooViajero" />
+                                        <p:commandButton value="" style="width: 780px; margin: -14px; height: 20px; border: none; color: blue" action="tipoviajero" onclick="#{controlTiposViajeros.inicializarLista()}" id="fooViajero" />
                                     </f:facet>
                                 </p:column>
 
